Database Connection Completed, Testing Phase Started!

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,13 @@
-READ_ONLY=true
-MAX_ROWS=500
-STATEMENT_TIMEOUT_MS=8000
+# Make a `./frontend/.env.local` file with this structure for the env file: 
+VITE_API_URL=http://127.0.0.1:8000
+
+# Make a `./backend/.env` file with this structure for the env file: 
+DATABASE_URL=postgresql+psycopg://user:pass@localhost:5432/yourdb
 ALLOWED_ORIGIN=http://localhost:5173
+
+DB_DRIVER=postgresql+psycopg
+DB_HOST=localhost
+DB_PORT=5433
+DB_NAME=dbt_a2
+DB_USER=postgres
+DB_PASSWORD=YourPass!
