added baseline code for the nl->sql query logic

--- a/.env.sample
+++ b/.env.sample
@@ -2,12 +2,22 @@
 VITE_API_URL=http://127.0.0.1:8000
 
 # Make a `./backend/.env` file with this structure for the env file: 
-DATABASE_URL=postgresql+psycopg://user:pass@localhost:5432/yourdb
+# backend/.env
+# Frontend:
 ALLOWED_ORIGIN=http://localhost:5173
 
+# DB URL Method:
+DATABASE_URL=postgresql+psycopg://postgres:YourPass@localhost:5433/dbt_a2
+
+# DB Form Method
 DB_DRIVER=postgresql+psycopg
 DB_HOST=localhost
 DB_PORT=5433
 DB_NAME=dbt_a2
 DB_USER=postgres
-DB_PASSWORD=YourPass!
+DB_PASSWORD=YourPass
+
+# LLM (fill these when ready)
+LLM_BASE_URL=http://localhost:11434/v1
+LLM_MODEL=llama3.1
+LLM_API_KEY=
