--- a/.env.sample
+++ b/.env.sample
@@ -19,5 +19,5 @@ DB_PASSWORD=YourPass
 
 # LLM (fill these when ready)
 LLM_BASE_URL=http://localhost:11434/v1
-LLM_MODEL=llama3.1
+LLM_MODEL=deepseek-r1:32b
 LLM_API_KEY=
